# video-editing-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ARCHITECTURE_SESSION.md  MANIFESTS.md  USAGE.md
docs/commands/: assemble.md  concat.md  extract_audio.md  plan.md  probe.md  trim.md  validate.md
examples/bash/: assemble-playlist.sh
examples/manifests/: concat-playlist.v1.json
examples/powershell/: assemble-playlist.ps1
src/video_editing_cli/: __init__.py  __main__.py  assembly.py  cli.py  ffmpeg.py  manifests.py  operations.py  service.py
src/video_editing_cli/commands/: __init__.py  assemble.py  concat.py  extract_audio.py  plan.py  probe.py  trim.py  validate.py
tests/: test_concat.py  test_manifests.py  test_validate.py
