[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "video-editing-cli"
version = "0.1.0"
description = "A reusable Python CLI for common FFmpeg-powered video editing tasks."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Bruce" }
]
dependencies = [
  "videoedit @ git+https://github.com/xolvco/videoedit.git@main"
]
keywords = ["video", "ffmpeg", "cli", "editing"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0"
]

[project.scripts]
video-edit = "video_editing_cli.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
